adds -o 'StrictHostKeyChecking no' to tunnel and exec uses bash